# nextlane

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml  vercel.json
.claude/skills/domain-reviewer/: SKILL.md
.claude/skills/scaffold-module/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: AGENTS.md  index.py  requirements.txt
api/_lib/: auth.py  db.py  errors.py  events.py  me.py  ratelimit.py  runs.py  settings.py  transitions.py  vehicles.py
docs/: demo-script.md  deployment.md  design-rationale.md
rails/: AGENTS.md  LEARNINGS.md  cli.py  config.py  context7.mcp.json  doctor.py  events.py  gate.py  github.py  journal.py  mission_control.py  prompts.py  worktree.py
rails/adapters/: __init__.py  base.py  claude.py  codex.py  gemini.py
rails/agents/: __init__.py  build_feature.py  loop.py  migrate.py  review.py  triage.py
rails/journal/: runs.jsonl
scripts/: apply_migrations.sh  create_user.sh
supabase/: AGENTS.md  config.toml  seed.sql
supabase/migrations/: 20260703152303_init_inventory.sql  20260704143428_mission_control.sql  20260704160000_mc_status_outcomes.sql  20260705120000_drop_review_rejected_outcome.sql
tests/: conftest.py  test_auth.py  test_errors.py  test_events_api.py  test_health.py  test_me_api.py  test_runs_api.py  test_transitions.py  test_vehicles_api.py
tests/rails/: conftest.py  fake_engine.py  test_adapters.py  test_build_feature.py  test_checklist_sync.py  test_cli.py  test_doctor.py  test_events.py  test_gate.py  test_github.py  test_journal.py  test_loop.py  test_migrate.py  test_mission_control.py  test_prompts.py  test_review.py  test_triage.py  test_worktree.py
tests/rails/fixtures/: claude-transcript-budget-exceeded.txt  claude-transcript.txt  codex-transcript-error.txt  codex-transcript.txt  gemini-transcript-error.txt  gemini-transcript-multiline.txt  gemini-transcript.txt
web/: .oxlintrc.json  AGENTS.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json
web/e2e/: auth.ts  constants.ts  global-setup.ts  prod-smoke.spec.ts  smoke.spec.ts  tsconfig.json
web/src/: App.tsx  main.tsx  theme.ts
web/src/components/: DeleteVehicleButton.tsx  ErrorBoundary.tsx  MarkdownLite.tsx  ReportIssueModal.tsx  RowActions.tsx  RunDetailDrawer.tsx  StatCards.tsx  StatusActions.tsx  VehicleFormDrawer.tsx
web/src/hooks/: useRunList.ts  useVehicleList.ts
web/src/lib/: api.ts  (+4 more)
(+3 files in other folders)
