[project]
name = "nextlane"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "psycopg[binary,pool]>=3.2",
  "pyjwt[crypto]>=2.9",
]

[dependency-groups]
dev = [
  "uvicorn>=0.30",
  "httpx>=0.27",
  "pytest>=8",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
