[project]
name = "nextlane"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "psycopg[binary,pool]>=3.2",
  "pyjwt[crypto]>=2.9",
]

[project.scripts]
rails = "rails.cli:app"

[dependency-groups]
dev = [
  "uvicorn>=0.30",
  "httpx>=0.27",
  "pytest>=8",
  "ruff>=0.15.20",
  "pip-audit>=2.7",
  "typer>=0.15",
  "rich>=13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rails"]   # REQUIRED: hatchling otherwise looks for nextlane/ and errors;
                       # also keeps api/, web/, tests/ out of the wheel

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
